--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "livewire/volt": "^1.6.7"
     },
     "require-dev": {
+        "driftingly/rector-laravel": "^2.0",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
